erDiagram
    IM_ACCOUNT {
        TEXT user_id PK
        TEXT nickname
        TEXT account_source "simulated/real"
    }

    BOT {
        TEXT bot_id PK
        TEXT bound_user_id FK "绑定唯一账号"
        TEXT display_name
        TEXT runtime_status
        TEXT config_path "配置文件路径"
    }

    CHAT_GROUP {
        TEXT group_id PK
        TEXT group_name
        TEXT group_source "simulated/real"
        TEXT group_owner_user_id FK
        INTEGER member_count
    }

    USER_GROUP {
        TEXT owner_user_id PK
        TEXT group_id PK
        TEXT category_id FK "该账号的群分类"
        INTEGER is_pinned
        INTEGER is_muted
    }

    CONVERSATION {
        TEXT conversation_id PK
        TEXT owner_user_id FK
        TEXT conversation_scene "private/group/temp"
        TEXT peer_user_id FK "对端"
        TEXT group_id FK "群聊时关联"
        INTEGER unread_count
        INTEGER is_pinned
        INTEGER is_muted
    }

    MESSAGE {
        TEXT message_id PK
        TEXT message_scene "private/group/temp"
        TEXT peer_id
        TEXT message_seq
        TEXT sender_user_id FK
        TEXT group_id FK
        TEXT bot_id "反规范化"
        TEXT session_id FK "调试会话"
        TEXT content_json "消息段JSON"
        INTEGER is_recalled
    }

    DEBUG_SESSION {
        TEXT session_id PK
        TEXT bot_id FK
        TEXT session_name
        INTEGER started_at
        INTEGER ended_at
    }

    PROTOCOL_PACKET {
        TEXT packet_id PK
        TEXT bot_id FK
        TEXT protocol_type "Milky/OneBot"
        TEXT direction "send/receive"
        TEXT action_name
        TEXT file_path "原始JSON路径"
        TEXT related_object_type "业务对象类型"
        TEXT related_object_id "业务对象ID"
        INTEGER is_error
        TEXT session_id FK
    }

    AUDIT_EVENT {
        TEXT event_id PK
        TEXT event_type
        TEXT actor_user_id FK
        TEXT target_type "操作目标类型"
        TEXT target_id "操作目标ID"
        TEXT detail_json
    }

    IM_ACCOUNT ||--o{ BOT : "binds, 1:0..1"
    IM_ACCOUNT ||--o{ CONVERSATION : "owns, 1:N"
    IM_ACCOUNT ||--o{ USER_GROUP : "has_view, 1:N"
    IM_ACCOUNT ||--o{ MESSAGE : "is_sender, 1:N"
    IM_ACCOUNT ||--o{ AUDIT_EVENT : "acts, 1:N"
    BOT ||--o{ DEBUG_SESSION : "starts, 1:N"
    BOT ||--o{ PROTOCOL_PACKET : "interacts, 1:N"
    DEBUG_SESSION ||--o{ PROTOCOL_PACKET : "groups, 1:N"
    CHAT_GROUP ||--o{ USER_GROUP : "appears_in, 1:N"
    CHAT_GROUP ||--o{ CONVERSATION : "is_peer, 1:N"
    CHAT_GROUP ||--o{ MESSAGE : "hosts_messages, 1:N"
    CONVERSATION ||--o{ MESSAGE : "displays, 1:N"
